# Zork-Assessment3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
command/: Command.h  NullCommand.cpp  NullCommand.h  PassageDefaultEnterCommand.cpp  PassageDefaultEnterCommand.h  RoomDefaultEnterCommand.cpp  RoomDefaultEnterCommand.h
core/: CheckpointManager.cpp  CheckpointManager.h  ZOOrkEngine.cpp  ZOOrkEngine.h
data/: checkpoint.json  item.json  map.csv  npc.json
entity/: Character.cpp  Character.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Player.cpp  Player.h
entity/character/: Character.cpp  Character.h  NPC.cpp  NPC.h  Player.cpp  Player.h
entity/item/: ClueItem.cpp  ClueItem.h  EquippableItem.cpp  EquippableItem.h  Item.cpp  Item.h  UsableItem.cpp  UsableItem.h
location/: Cell.cpp  Cell.h  Location.cpp  Location.h
location/cell/: Cell.cpp  Cell.h  DoorCell.cpp  DoorCell.h  DoorState.h  RestrictedCell.cpp  RestrictedCell.h
location/passage/: NullPassage.cpp  NullPassage.h  Passage.cpp  Passage.h
location/room/: NullRoom.cpp  NullRoom.h  Room.cpp  Room.h
map/: ItemLoader.cpp  ItemLoader.h  MapLoader.cpp  MapLoader.h  NPCLoader.cpp  NPCLoader.h
utils/: Color.h
